# networkinference

./: .gitignore  .readthedocs.yaml  CHANGELOG.txt  LICENSE.txt  README.rst  pyproject.toml  requirements.txt  setup.cfg
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  networkinference.core.rst  networkinference.rst  networkinference.utils.rst
docs/source/_autosummary/: networkinference.IPW.rst  networkinference.OLS.rst  networkinference.TSLS.rst  networkinference.utils.tools.FakeData.rst  networkinference.utils.tools.adjrownorm.rst  networkinference.utils.tools.nhbr_mean.rst
docs/tutorial/: fake_some_data.py  network.adjlist  node_data.csv  tutorial.ipynb
src/networkinference/: __init__.py  core.py  inference.py
src/networkinference/utils/: __init__.py  tools.py
