[metadata]
name = networkinference
url = https://github.com/mpleung/networkinference
author = Michael P. Leung
author_email= no@spam.com
version = attr: networkinference.__version__
description = Inferential tools for network-dependent data.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause License
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research 
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
package_dir = 
    =src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib>=3.4
    networkx>=2.6
    numpy>=1.21
    scikit-learn>=0.24
    scipy>=1.7
    seaborn>=0.11
    tabulate>=0.8

[options.packages.find]
where=src

